--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,4 +3,15 @@ body {
   background: #151515;
   scroll-behavior: smooth;
   overflow-x: hidden;
+  height: 95vh;
+  max-height: 95vh;
+  transition: height 1000000s ease;
+  -webkit-transition: height 1000000s ease;
+  -moz-transition: height 1000000s ease;
+  -o-transition: height 1000000s ease;
+}
+
+
+body::-webkit-scrollbar {
+  display: none;
 }
